--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,26 @@ input {
   font-family: "Source Sans Pro", 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+#success-banner {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+
+  padding: 20px;
+
+  background-color: white;
+  color: #9A3412;
+  font-weight: 600;
+
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 5px;
+}
+
+.hide {
+  display: none;
+}
+
 div.main {
   position: relative;
   width: 400px;
@@ -61,25 +81,30 @@ div.main form input {
   display: inline-block;
   font-size: 20px;
   line-height: 1;
-  background-color: transparent;
+  /* background-color: transparent; */
+  background-color: rgba(255, 255, 255, 0.75);
   outline: none;
   height: 50px;
   padding: 0 10px;
-  border: 1px solid rgba(255, 255, 255, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.75);
   transition: border-color 0.25s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
   box-sizing: border-box;
   vertical-align: text-top;
-  color: rgba(255, 255, 255, 0.7);
+  color: black;
 }
 
-div.main form input[type=text]:focus,
+div.main form input[type=email]::placeholder {
+  color: black;
+}
+
+div.main form input[type=email]:focus,
 div.main form input[type=submit]:hover {
   background-color: rgba(255, 255, 255, 0.05);
   border-color: white;
   color: white;
 }
 
-div.main form input[type=text] {
+div.main form input[type=email] {
   margin-right: 10px;
   width: 250px;
 }
@@ -114,12 +139,12 @@ footer div.links a svg {
 }
 
 footer div.links a svg path {
-  fill: rgba(255, 255, 255, 0.2);
+  fill: rgba(255, 255, 255, 0.75);
   transition: fill 0.25s;
 }
 
 footer div.links a:hover svg path {
-  fill: rgba(255, 255, 255, 0.7);
+  fill: rgba(255, 255, 255, 1.0);
 }
 
 footer p {
